--- a/app/src/main/res/layout/what_if_calculator.xml
+++ b/app/src/main/res/layout/what_if_calculator.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".WhatIfCalculator"
+    android:background="#453D3D">
 
     <TextView
         android:id="@+id/textViewWhatif"
@@ -13,6 +14,7 @@
         android:layout_marginEnd="108dp"
         android:layout_marginBottom="552dp"
         android:text="What-If Calculator"
+        android:textColor="#FFC107"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -21,8 +23,8 @@
         android:id="@+id/spinnerMajor"
         android:layout_width="380dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="431dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="428dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -33,6 +35,7 @@
         android:layout_marginEnd="165dp"
         android:layout_marginBottom="15dp"
         android:text="Select Major:"
+        android:textColor="#FFC107"
         app:layout_constraintBottom_toTopOf="@+id/spinnerMajor"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -43,6 +46,7 @@
         android:layout_marginEnd="167dp"
         android:layout_marginBottom="368dp"
         android:text="Select Minor"
+        android:textColor="#FFC107"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -50,7 +54,7 @@
         android:id="@+id/spinnerMinor"
         android:layout_width="380dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="1dp"
+        android:layout_marginEnd="12dp"
         android:layout_marginBottom="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -59,8 +63,8 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="167dp"
-        android:layout_marginBottom="203dp"
+        android:layout_marginEnd="160dp"
+        android:layout_marginBottom="204dp"
         android:text="Submit"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
