--- a/app/src/main/res/layout/login_main.xml
+++ b/app/src/main/res/layout/login_main.xml
@@ -56,4 +56,16 @@
         app:layout_constraintEnd_toEndOf="@+id/usernameEditText"
         app:layout_constraintTop_toBottomOf="@+id/usernameEditText" />
 
+    <TextView
+        android:id="@+id/newUserTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="38dp"
+        android:text="New User? Click Here"
+        android:textStyle="bold|italic"
+        android:textColor="#FFC107"
+        app:layout_constraintStart_toStartOf="@+id/passwordEditText"
+        app:layout_constraintTop_toBottomOf="@+id/loginButton"
+        android:onClick="NewUser"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
