--- a/app/src/main/res/layout/student_profile.xml
+++ b/app/src/main/res/layout/student_profile.xml
@@ -7,7 +7,7 @@
     android:background="#453D3D">
 
     <Button
-        android:id="@+id/button5"
+        android:id="@+id/whatIfCalculatorButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="149dp"
@@ -40,7 +40,7 @@
         android:id="@+id/textView8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="31dp"
         android:text="Classification"
         android:textColor="#FFC107"
         app:layout_constraintStart_toStartOf="@+id/textView7"
@@ -61,7 +61,7 @@
         android:id="@+id/textView10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="28dp"
         android:text="Pursuing Degree"
         android:textColor="#FFC107"
         app:layout_constraintStart_toStartOf="@+id/textView9"
@@ -71,19 +71,19 @@
         android:id="@+id/textView12"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="34dp"
         android:text="Minor"
         android:textColor="#FFC107"
         app:layout_constraintStart_toStartOf="@+id/textView11"
         app:layout_constraintTop_toBottomOf="@+id/textView11" />
 
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/planOverviewButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginBottom="18dp"
+        android:layout_marginBottom="17dp"
         android:text="Check Current Plan"
-        app:layout_constraintBottom_toTopOf="@+id/button5"
-        app:layout_constraintStart_toStartOf="@+id/button5" />
+        app:layout_constraintBottom_toTopOf="@+id/whatIfCalculatorButton"
+        app:layout_constraintStart_toStartOf="@+id/whatIfCalculatorButton" />
 </androidx.constraintlayout.widget.ConstraintLayout>
